k8s/secondapp-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secondapp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: secondapp
  template:
    metadata:
      labels:
        app: secondapp
    spec:
      containers:
        - name: secondapp
          image: sachinbhuibar/secondapp
          ports:
            - containerPort: 4000
