k8s/firstapp-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: firstapp-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: firstapp
  ports:
    - port: 3000
      targetPort: 3000
