k8s/secondapp-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: secondapp-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: secondapp
  ports:
    - port: 4000
      targetPort: 4000
