k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /firstapp
            pathType: Prefix
            backend:
              service:
                name: firstapp-cluster-ip-service
                port:
                  number: 3000
    - http:
        paths:
          - path: /secondapp
            pathType: Prefix
            backend:
              service:
                name: secondapp-cluster-ip-service
                port:
                  number: 4000
